--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard": "^17.1.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
@@ -52,7 +52,6 @@
     "react-refresh": "^0.11.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
@@ -68,7 +67,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "eslint src/**/*.{js,ts,tsx} --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -155,6 +155,9 @@
     ]
   },
   "devDependencies": {
-    "husky": "^9.1.6"
+    "eslint-config-react-app": "^7.0.1",
+    "husky": "^9.1.6",
+    "sass": "^1.79.4",
+    "sass-loader": "^16.0.2"
   }
 }
